syntax = "proto3";

package com.quick.dfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.quick.dfs.namenode.rpc.model";
option java_outer_classname = "NameNodeRpcModel";

message RegisterRequest{  
    string ip  = 1;  
    string hostname  = 2;  
}  
message RegisterResponse{  
    int32 status  = 1;   
}
message HeartbeatRequest{  
    string ip  = 1;  
    string hostname  = 2;  
}  
message HeartbeatResponse{  
    int32 status  = 1;
    string commands = 2;
}
message MkDirRequest{
    string path = 1;
}
message MkDirResponse{
    int32 status = 1;
}
message ShutdownRequest{
    int32 code = 1;
}
message ShutdownResponse{
    int32 status = 1;
}
message FetchEditLogRequest{
    int32 code = 1;
    int64 syncedTxid = 2;
}
message FetchEditLogResponse{
    int32 status = 1;
    string editLogs = 2;
}
message UpdateCheckpointTxidRequest{
    int64 txid = 1;
}
message UpdateCheckpointTxidResponse{
    int32 status = 1;
}
message CreateFileRequest{
    string fileName = 1;
}
message CreateFileResponse{
    int32 status = 1;
}
message AllocateDataNodesRequest{
    string fileName = 1;
    int64 fileSize = 2;
}
message AllocateDataNodesResponse{
    string dataNodes = 1;
}
message InformReplicaReceivedRequest{
    string ip = 1;
    string hostname = 2;
    string fileName = 3;
    int64 fileLength = 4;
}
message InformReplicaReceivedResponse{
    int32 status = 1;
}
message ReportCompleteStorageInfoRequest{
    string ip = 1;
    string hostname = 2;
    string fileNames = 3;
    int64 storedDataSize = 4;
}
message ReportCompleteStorageInfoResponse{
    int32 status = 1;
}
message GetDataNodeForFileRequest{
    string fileName = 1;
    string excludeDataNode = 2;
}
message GetDataNodeForFileResponse{
    int32 status = 1;
    string dataNodeInfo = 2;
}
message RelocateDataNodeRequest{
    string fileName = 1;
    int64 fileSize = 2;
    string excludeDataNodes = 3;
}
message RelocateDataNodeResponse{
    string dataNode = 1;
}
message RebalanceRequest{
}
message RebalanceResponse{
    int32 status = 1;
}
