syntax = "proto3";

package com.quick.dfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.quick.dfs.namenode.rpc.service";
option java_outer_classname = "NameNodeServer";

import "NameNodeRpcModel.proto";

service NameNodeService {  
    rpc register(RegisterRequest) returns (RegisterResponse);  
	rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
	rpc mkDir(MkDirRequest) returns (MkDirResponse);
	rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
	rpc fetchEditLog(FetchEditLogRequest) returns (FetchEditLogResponse);
	rpc updateCheckpointTxid(UpdateCheckpointTxidRequest) returns (UpdateCheckpointTxidResponse);
	rpc createFile(CreateFileRequest) returns (CreateFileResponse);
	rpc allocateDataNodes(AllocateDataNodesRequest) returns (AllocateDataNodesResponse);
	rpc informReplicaReceived(InformReplicaReceivedRequest) returns (InformReplicaReceivedResponse);
	rpc reportCompleteStorageInfo(ReportCompleteStorageInfoRequest) returns (ReportCompleteStorageInfoResponse);
	rpc getDataNodeForFile(GetDataNodeForFileRequest) returns (GetDataNodeForFileResponse);
	rpc relocateDataNode(RelocateDataNodeRequest) returns (RelocateDataNodeResponse);
	rpc rebalance(RebalanceRequest) returns (RebalanceResponse);
}